--- a/index.css
+++ b/index.css
@@ -1,3 +1,81 @@
-#heading{
-    color: blueviolet;
+
+
+.header{
+    background-color: aquamarine;
+    display: flex;
+    justify-content: space-between;
+    border: 1px solid black;
+    height: 6vh;
+}
+
+.logo{
+    width: 5vh;
+    height: 5vh;
+    object-fit: contain;
+}
+.logo-container{
+    width: 5vh;
+    height: 5vh;
+    padding: 5px;
+    cursor: pointer;
+    border-radius: 40px
+}
+
+.nav-items > ul{
+    display: flex;
+    list-style-type: none;;
+}
+
+.nav-items > ul > li{
+    margin-right: 20px;
+    font-size: 24px;
+    cursor: pointer;
+}
+
+.restaurant-card{
+    width: 20vh;
+    height: 25vh;
+    border: 1px solid black;
+    background-color: rgb(157, 219, 130);
+    text-align: center;
+    transition-duration: .2s;
+    margin: 3px;
+}
+
+
+.search{
+    padding: 10px;
+}
+
+.restaurant-container{
+    display: flex;
+   flex-wrap: wrap;
+   
+}
+
+
+.restaurant-card > img{
+    border: 1px solid black;
+}
+.restaurant-card:hover{
+    transform: scale(1.05);
+}
+.restaurant-card > h2{
+    font-size: 1.5em;
+}
+
+.restaurant-card > p{
+    font-size: 1.2em;
+    color: rgb(103, 96, 96);
+}
+
+.card-img{
+    height: 10vh;
+    width: 10vh;
+    margin: 3px auto;
+}
+
+.card-img > img{
+    width: 10vh;;
+    height: 10vh;
 }
