--- a/index.css
+++ b/index.css
@@ -34,9 +34,9 @@
 
 .restaurant-card{
     width: 20vh;
-    height: 25vh;
+    /* height: 25vh; */
     border: 1px solid black;
-    background-color: rgb(157, 219, 130);
+    background-color: rgb(150, 192, 201);
     text-align: center;
     transition-duration: .2s;
     margin: 3px;
@@ -58,7 +58,7 @@
     border: 1px solid black;
 }
 .restaurant-card:hover{
-    transform: scale(1.05);
+    transform: scale(1.01);
 }
 .restaurant-card > h2{
     font-size: 1.5em;
@@ -66,16 +66,20 @@
 
 .restaurant-card > p{
     font-size: 1.2em;
-    color: rgb(103, 96, 96);
+    color: rgb(0, 0, 0);
 }
 
 .card-img{
-    height: 10vh;
-    width: 10vh;
-    margin: 3px auto;
+    height: 13vh;
+    width: 100%;
+    
+    border: 1px solid black;
+    
 }
 
 .card-img > img{
-    width: 10vh;;
-    height: 10vh;
+    width: 100%;
+    height: 13vh;
+    object-fit: cover;
+
 }
