--- a/index.css
+++ b/index.css
@@ -1,4 +1,8 @@
 
+.body{
+    display: flex;
+    flex-direction: column;
+}
 
 .header{
     background-color: aquamarine;
@@ -82,4 +86,21 @@
     height: 13vh;
     object-fit: cover;
 
+}
+
+.filter{
+    padding: 2px;
+    margin: 2px;
+    
+}
+
+.filter-btn{
+    padding: 10px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1.2em;
+}
+
+.filter-btn:hover{
+    background-color: rgb(138, 232, 232);
 }
