--- a/index.css
+++ b/index.css
@@ -91,6 +91,7 @@
 .filter{
     padding: 2px;
     margin: 2px;
+    display: flex;
     
 }
 
@@ -103,4 +104,36 @@
 
 .filter-btn:hover{
     background-color: rgb(138, 232, 232);
+}
+
+
+
+
+
+
+
+
+
+/* Shimmer UI */
+
+.shimmer-container{
+    display: flex;
+    flex-wrap: wrap;;
+}
+
+.shimmer-cards{
+    margin: 20px;;
+    width: 250px;
+    height: 400px;
+    background-color:rgb(214, 221, 227);
+}
+
+.login-btn{
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1.2em;
+    background-color: rgb(182, 223, 34);
+    transition-duration:.2s;
+    margin-right: 10px;
 }
