--- a/index.css
+++ b/index.css
@@ -7,15 +7,16 @@
 .header{
     background-color: aquamarine;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     border: 1px solid black;
-    height: 6vh;
+    height: 45;
 }
 
 .logo{
-    width: 5vh;
-    height: 5vh;
-    object-fit: contain;
+    object-fit: scale-down;
+    width: 30px;
+    height: 38px;
 }
 .logo-container{
     width: 5vh;
@@ -28,12 +29,15 @@
 .nav-items > ul{
     display: flex;
     list-style-type: none;;
+    flex-wrap: wrap;
+    margin: auto;
 }
 
 .nav-items > ul > li{
-    margin-right: 20px;
-    font-size: 24px;
+    /* margin-right: 20px; */
+    font-size: 1.2em;
     cursor: pointer;
+    margin: 10px;
 }
 
 .restaurant-card{
@@ -47,9 +51,7 @@
 }
 
 
-.search{
-    padding: 10px;
-}
+
 
 .restaurant-container{
     display: flex;
@@ -88,23 +90,28 @@
 
 }
 
-.filter{
-    padding: 2px;
-    margin: 2px;
+.btn{
     display: flex;
-    
+    flex-wrap: wrap;
+}
+
+.search{
+    padding: 10px;
+}
+
+.filter{
+    padding: 10px;
 }
 
 .filter-btn{
-    padding: 10px;
-    border-radius: 5px;
     cursor: pointer;
-    font-size: 1.2em;
+    
 }
 
-.filter-btn:hover{
-    background-color: rgb(138, 232, 232);
+.search-btn{
+
 }
+
 
 
 
@@ -129,11 +136,11 @@
 }
 
 .login-btn{
-    padding: 10px 20px;
+  
     border-radius: 5px;
     cursor: pointer;
-    font-size: 1.2em;
-    background-color: rgb(182, 223, 34);
+    color: white;
+    background-color: rgb(0, 0, 0);
     transition-duration:.2s;
     margin-right: 10px;
 }
